[FIX] align items center on div row

--- a/src/app/_shared/_components/header/header.component.scss
+++ b/src/app/_shared/_components/header/header.component.scss
@@ -12,6 +12,7 @@ text-align: center;
 padding: 14px 16px;
 text-decoration: none;
 font-size: 17px;
+border-radius: 15px;
 }
 
 /* Change the color of links on hover */
